# TechTonic_Techmentorx

./: README.md
Backend/: COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  main.py  pyproject.toml  test_routes.py
Backend/Chatbot/: __init__.py  bot.py  chatbot.py  routes.py
Backend/authentication/: __init__.py  auth_schema.py  jwt_protected.py  jwt_utils.py  login_api.py  mongo_connection.py  password_utils.py  signup_api.py
Backend/routes/: amadeus_check.py  route_recommendations.py
Backend/schemas/: base.py  history.py  llm_explanation.py  notification.py  price_alert.py  result.py  route.py  search.py  session.py  user.py
Frontend/: .env.example  GOOGLE_AUTH_SETUP.md  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css  main.jsx
Frontend/src/components/: BookingConfirmed.jsx  BookingPage.jsx  FlightSelection.jsx  PaymentPage.jsx  TravelPass.jsx  TripSelection.jsx  loginpage.jsx
Frontend/src/data/: cities.js
Frontend/src/lib/: supabase.js
MMain/: .env  README.md  package-lock.json  package.json
MMain/backend/: .env  package-lock.json  package.json
MMain/backend/src/: app.js  server.js
MMain/backend/src/config/: env.js  gemini.js  mongo.js
MMain/backend/src/controllers/: search.controller.js
MMain/backend/src/models/: airport.model.js  priceSnapshot.model.js
MMain/backend/src/routes/: auth.routes.js  search.routes.js
MMain/backend/src/utils/: coords.js  (+3 more)
MMain/frontend/: app.js  index.html  map.js  maps.js  simple.html  style.css
dataset/: india_flight_routes.csv  india_train_routes.csv
(+9 files in other folders)
